src/test/resources/org/nest/spl/_cocos/invalid/varNotDefinedBeforeUse.simple
module org.nest.spl._cocos.varNotDefinedBeforeUse
y real = 5 * x # Error 1

x = 13 # Error 2

for x in t1 ... t2 :: 1: # 2 errors
# blaa
end


x = 2 # Error 4

x real = 2 * x # Error 5

while t2 > t1: # error
end

exp(t1) # error

t1 integer
t2 integer
